Added a test to check the correctness of player names